# haskell-transducers

./: LICENSE  README.md  stack.yaml  transducer.cabal
app/: Main.hs
src/Data/: Transducer.hs
src/Data/Transducer/: Conduit.hs
