name:                transducer
version:             0.1.0.0
synopsis:            Clojure's Transducer in Haskell
description:         Please see README.md
homepage:            https://github.com/hyPiRion/haskell-transducers#readme
license:             BSD3
license-file:        LICENSE
author:              Jean Niklas L'orange
maintainer:          jeannikl@hypirion.com
copyright:           2016 Jean Niklas L'orange
category:            Data
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.Transducer
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable haskell-transducers-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , transducer
  default-language:    Haskell2010

test-suite haskell-transducers-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , transducer
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/hyPiRion/haskell-transducers
